--- a/www/project_tools.html
+++ b/www/project_tools.html
@@ -1,6 +1,6 @@
-<script src="https://ssl.google-analytics.com/urchin.js" type="text/javascript">
+<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
 </script>
 <script type="text/javascript">
-	_uacct = "UA-234456-5";
+	_uacct = "UA-319188-3";
 	urchinTracker();
 </script>
