--- a/www/project_tools.html
+++ b/www/project_tools.html
@@ -1,6 +1,74 @@
+</div>
+</dd>
+</dl>
+<script id="eraser">
+
+// if the Get Involved block was named I could just get the
+// the two sections by name and set the display to none. 
+
+// get to the block
+var dd = document.getElementById("eraser").previousSibling;
+
+// hide all default navigation bars
+
+// within the previous blocks hide everything
+for( n=dd; n!=null; n=n.previousSibling ) {
+	if(n.nodeType==1) { // if element
+		if(n.tagName=="DL") { // kill all the link items
+			n.style.display = "none";
+		}
+	}
+}
+
+// This is all you can do because the "Search" and "How do I"
+// boxes aren't created
+</script>
+
+<dl id="tools" class="navgroup">
+<dt>Project Tools</dt>
+<dd>
+<ul>
+<li><a href="http://www.sip-communicator.org">sip-communicator.org</a></li>
+ <li><a href="http://www.sip-communicator.org/index.php/Development/TeamAndContributors">Team and Contributors</a></li>
+</ul>
+</dd>
+
+<dd>
+<ul>
+<li> <a href="https://sip-communicator-1-0-draft.dev.java.net/source/browse/sip-communicator-1-0-draft/">Version Control - CVS</a></li>
+<li><a href="https://sip-communicator.dev.java.net/source/browse/sip-communicator/">"Old" CVS</a> (discontinued)</li>
+</ul>
+</dd>
+
+<dd>
+<ul>
+<li> <a href="http://www.sip-communicator.org/index.php/Development/MailingLists">Mailing lists</a></li>
+</ul>
+</dd>
+
+<dd>
+<ul>
+<li> <a href="https://sip-communicator-1-0-draft.dev.java.net/servlets/ProjectDocumentList">Downloads</a></li>
+<li><a href="https://sip-communicator.dev.java.net/servlets/ProjectDocumentList">"Old"ones </a> (discontinued)</li>
+</ul>
+</dd>
+
+<dd>
+<ul>
+<li><a href="https://sip-communicator-1-0-draft.dev.java.net/servlets/ProjectIssues">Issue tracker</a>
+    </li>
+<li><a href="https://sip-communicator-1-0-draft.dev.java.net/issues/buglist.cgi?component=sip-communicator-1-0-draft&issue_status=UNCONFIRMED&issue_status=NEW&issue_status=STARTED&issue_status=REOPENED">All Issues</a></li>
+<li><form name="ProjectIssuesForm" method="get" action="https://sip-communicator-1-0-.dev.java.net/issues/show_bug.cgi">
+        <input type="submit" value="Go to Issue # "/> &nbsp <input name="id" size="3" />
+      </form></li>
+</ul>
+</dd>
+
+</dl>
+
 <script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
 </script>
 <script type="text/javascript">
-	_uacct = "UA-319188-3";
+	_uacct = "UA-319188-2";
 	urchinTracker();
 </script>
