--- a/www/project_tools.html
+++ b/www/project_tools.html
@@ -35,8 +35,7 @@ for( n=dd; n!=null; n=n.previousSibling ) {
 
 <dd>
 <ul>
-<li> <a href="https://sip-communicator-1-0-draft.dev.java.net/source/browse/sip-communicator-1-0-draft/">Version Control - CVS</a></li>
-<li><a href="https://sip-communicator.dev.java.net/source/browse/sip-communicator/">"Old" CVS</a> (discontinued)</li>
+<li> <a href="https://sip-communicator.dev.java.net/source/browse/sip-communicator/">Version Control - CVS</a></li>
 </ul>
 </dd>
 
@@ -49,7 +48,6 @@ for( n=dd; n!=null; n=n.previousSibling ) {
 <dd>
 <ul>
 <li> <a href="https://sip-communicator-1-0-draft.dev.java.net/servlets/ProjectDocumentList">Downloads</a></li>
-<li><a href="https://sip-communicator.dev.java.net/servlets/ProjectDocumentList">"Old"ones </a> (discontinued)</li>
 </ul>
 </dd>
 
