Removed references to the old repository.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@1665 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/www/project_tools.html
+++ b/www/project_tools.html
@@ -47,16 +47,16 @@ for( n=dd; n!=null; n=n.previousSibling ) {
 
 <dd>
 <ul>
-<li> <a href="https://sip-communicator-1-0-draft.dev.java.net/servlets/ProjectDocumentList">Downloads</a></li>
+<li> <a href="https://sip-communicator.dev.java.net/servlets/ProjectDocumentList">Downloads</a></li>
 </ul>
 </dd>
 
 <dd>
 <ul>
-<li><a href="https://sip-communicator-1-0-draft.dev.java.net/servlets/ProjectIssues">Issue tracker</a>
+<li><a href="https://sip-communicator.dev.java.net/servlets/ProjectIssues">Issue tracker</a>
     </li>
-<li><a href="https://sip-communicator-1-0-draft.dev.java.net/issues/buglist.cgi?component=sip-communicator-1-0-draft&issue_status=UNCONFIRMED&issue_status=NEW&issue_status=STARTED&issue_status=REOPENED">All Issues</a></li>
-<li><form name="ProjectIssuesForm" method="get" action="https://sip-communicator-1-0-.dev.java.net/issues/show_bug.cgi">
+<li><a href="https://sip-communicator.dev.java.net/issues/buglist.cgi?component=sip-communicator&issue_status=UNCONFIRMED&issue_status=NEW&issue_status=STARTED&issue_status=REOPENED">All Issues</a></li>
+<li><form name="ProjectIssuesForm" method="get" action="https://sip-communicator.dev.java.net/issues/show_bug.cgi">
         <input type="submit" value="Go to Issue # "/> &nbsp <input name="id" size="3" />
       </form></li>
 </ul>
