added link tags for favicon
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@1669 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/www/project_tools.html
+++ b/www/project_tools.html
@@ -1,3 +1,5 @@
+<link rel='icon' href='sc_logo16x16.png' type='image/png' />
+<link rel='SHORTCUT ICON' href='sc_logo16x16.png'/>
 </div>
 </dd>
 </dl>
