--- a/www/project_tools.html
+++ b/www/project_tools.html
@@ -1,5 +1,5 @@
-<link rel='SHORTCUT ICON' href='http://www.sip-communicator.org/wiki/pub/sip-communicator/sc_logo16x16.png'	/>
-<link rel='icon' href='http://www.sip-communicator.org/wiki/pub/sip-communicator/sc_logo16x16.png' type='image/png' />
+<link rel='SHORTCUT ICON' href='http://sip-communicator.dev.java.net/sc_logo16x16.png'	/>
+<link rel='icon' href='http://sip-communicator.dev.java.net/sc_logo16x16.png' type='image/png' />
 </div>
 </dd>
 </dl>
