Updated to match sip-communicator.org
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@1909 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/www/index.html
+++ b/www/index.html
@@ -40,11 +40,9 @@ for( n=ld.firstChild; n!=null; n=n.nextSibling ) {
     <td width="90%">
     <p><strong>SIP Communicator - the Java VoIP and Instant Messaging client.</strong></p>
     <p align="justify">
-    SIP Communicator 1.0 is an application that allows you (or rather would soon
-    allow you ;) ) to do audio/video conversations over the Internet through the
-    SIP protocol, as well as chat with your friends using some of the most
-    popular instant messaging protocols such as SIP/SIMPLE, Jabber, AIM/ICQ,
-    MSN, Yahoo, IRC and others.
+    SIP Communicator is an audio/video Internet phone and instant messenger that
+    support some of the most popular instant messaging and telephony protocols
+    such as SIP, Jabber, AIM/ICQ, MSN and soon others like Yahoo and IRC.
     </p>
     <p align="justify">
     The SIP Communicator is completely <a href="http://www.opensource.org/">Open Source</a> /
@@ -53,51 +51,32 @@ for( n=ld.firstChild; n!=null; n=n.nextSibling ) {
     <a href="http://www.gnu.org/licenses/lgpl.html">GNU Lesser General Public License</a>.
     </p>
 
-    <p align="justify">
-    <strong>
-    Note that right now the SIP Communicator is still a work in progress </strong>
-    and as such is currently unusable by end users. If you are a developer and would
-    like to help up you may consult the
-    <a href="http://clarinet.u-strasbg.fr/sip-communicator/index.php/Development/Roadmap">Project Roadmap</a>
-    and join discussion on the
-    <a href="http://clarinet.u-strasbg.fr/sip-communicator/index.php/Development/MailingLists#dev">dev</a>
-    mailing list in order to pick up tasks that you think you can handle. In
-    case you are just an eager user and would like to get notified once the
-    release is available, then you might want to subscribe to
-    <a href="http://sip-communicator.org/index.php/Development/MailingLists#announce">announce</a> mailing list
-    (very very low traffic).
-    </p>
     <table border="0" cellpadding="2" cellspacing="2" width="98%"
   style="background-color: white">
     <tr><td style="background-color: lightgray">
-    <p align="justify">
-    RESOURCES: The SIP Communicator
-    <a href="http://sip-communicator.org/index.php/Documentation/FAQ">FAQ</a>
-    can usually answer most questions. You can also ask on the
-    <a href="http://sip-communicator.org/index.php/Development/MailingLists#users">users</a>
-    mailing list, or at the
-    <a href="http://clarinet.u-strasbg.fr/sip-communicator/index.php/Development/MailingLists#irc">irc channel</a>
-    #sip-communicator at irc.freenode.net. (Note that the mailing lists are moderated, so
-    there may be a delay before your post shows up.)
-    </p>
-    </tr></td>
+      <p align="justify">
+        RESOURCES: The SIP Communicator <a class='wikilink'
+          href='http://www.sip-communicator.org/index.php/Documentation/FAQ'>FAQ</a>
+          can usually answer most questions. You can also ask on the
+          <a class='wikilink'
+            href='http://www.sip-communicator.org/index.php/Development/MailingLists#users'>users</a>
+            mailing list, or at the <a class='urllink'
+              href='http://www.sip-communicator.org/irc/irc.cgi' rel='nofollow'>irc channel</a>
+              #sip-communicator at irc.freenode.net.
+      </p>
+      </tr></td>
     </table>
-
-    <p align="justify">
-  <strong>For those looking for SIP Communicator's previous versions, please
-   read the following note.</strong>
-    </p>
-    <p align="justify">
-  <strong>Note:</strong> This site, as well as
-  <a href="http://sip-communicator.org">sip-communicator.org</a> are both dedicated to the development
-  of SIP Communicator version 1.0. Releases made before it, (we call them Pre 1.0
-  for lack of versioning) could be considered alpha have represented more of an
-  experimental application rather than a fully featured communications client.
-  We are all currently focusing on the development of SIP Communicator 1.0 and
-  will be unable to maintain or provide any support on Pre 1.0 code. If for some
-  reason however you are looking for the "old" SIP Communicator, you could find
-  its source and binaries here.
-</p>
+    <p><em>
+        <strong>Note:</strong> Right now the SIP Communicator is still a work in
+        progress and as such is still unstable. If you would like to help or
+        follow project progress check the <a class='wikilink'
+          href='http://www.sip-communicator.org/index.php/Development/Roadmap'>Project Roadmap</a>
+          or join our <a class='wikilink' href='http://www.sip-communicator.org/index.php/Development/MailingLists'>Mailing Lists</a>.
+          You can also have a look at the SIP Communicator <a class='wikilink' href='http://www.sip-communicator.org/index.php/Main/Screenshots'>screenshots</a> </em>
+     </p>
+    </td>
+  </tr>
+</table>
 
 <p>
 <strong>
@@ -106,10 +85,6 @@ Thanks for your patience and continuing support!
 <a href="https://sip-communicator.org/wiki/index.php/Development/TeamAndContributors">
 The SIP Communicator team</a></strong></p>
 
-<p>&nbsp;</p>
-    </td>
-  </tr>
-</table>
 <p><a href="http://www-r2.u-strasbg.fr/english/index_en.php">Network Research Team</a><br>
 <a href="http://www-ulp.u-strasbg.fr/?langue=1">Louis Pasteur University - Strasbourg, France</a><br>
 </p>
