Redirect "Downloads" to SIP Communicator . org
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@2337 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/www/project_tools.html
+++ b/www/project_tools.html
@@ -49,7 +49,7 @@ for( n=dd; n!=null; n=n.previousSibling ) {
 
 <dd>
 <ul>
-<li> <a href="https://sip-communicator.dev.java.net/servlets/ProjectDocumentList">Downloads</a></li>
+<li> <a href="http://www.sip-communicator.org/index.php/Main/Download">Downloads</a></li>
 </ul>
 </dd>
 
