Added Summer of Code announcement
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@2423 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/www/index.html
+++ b/www/index.html
@@ -27,7 +27,12 @@ for( n=ld.firstChild; n!=null; n=n.nextSibling ) {
     }
 }
 </script>
+<table  border='0' width='800' align='justify' style='margin-left: 5px; margin-right: 20px; border: thin dashed #CCCCCC;'>
+<tr ><td  style='padding:5px;valign='middle'' >
+<div style='text-align: center;' > <a class='urllink' href='http://sip-communicator.org/gsoc' rel='nofollow'><img src='http://code.google.com/images/code_sm.png' alt='' title='' /></a></div>
+</td><td  style='padding:5px;' valign='top' >SIP Communicator is accepting student applications for Google Summer of Code 2007! Want to participate? Pick one of our <a class='urllink' href='http://sip-communicator.org/gsoc' rel='nofollow'>project ideas</a> <strong>Before March 24, 2007!</strong>    </p>
 
+</td></tr></table>
 <table border="0" cellpadding="0" style="border-collapse: collapse" bordercolor="#111111" width="800" id="AutoNumber2">
   <tr>
     <td width="10%" valign="middle">
