--- a/www/project_tools.html
+++ b/www/project_tools.html
@@ -84,3 +84,9 @@ _uacct = "UA-1273798-1";
 urchinTracker();
 </script>
 -->
+<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
+</script>
+<script type="text/javascript">
+	_uacct = "UA-319188-2";
+	urchinTracker();
+</script>
