Set table width to 100%
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@2874 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/www/index.html
+++ b/www/index.html
@@ -27,7 +27,7 @@ for( n=ld.firstChild; n!=null; n=n.nextSibling ) {
     }
 }
 </script>
-<table border="0" cellpadding="0" style="border-collapse: collapse" bordercolor="#111111" width="800" id="AutoNumber2">
+<table border="0" cellpadding="0" style="border-collapse: collapse" bordercolor="#111111" width="100%" id="AutoNumber2">
   <tr>
     <td width="10%" valign="middle">
     <p align="center">
