justify the note
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@2876 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/www/index.html
+++ b/www/index.html
@@ -53,7 +53,7 @@ for( n=ld.firstChild; n!=null; n=n.nextSibling ) {
     <table border="0" cellpadding="2" cellspacing="2" width="100%"
   style="background-color: white">
     <tr><td style="background-color: lightgray">
-      <p align="justify">
+      <p alin="justify">
         RESOURCES: The SIP Communicator <a class='wikilink'
           href='http://www.sip-communicator.org/index.php/Documentation/FAQ'>FAQ</a>
           can usually answer most questions. You can also ask on the
@@ -65,7 +65,7 @@ for( n=ld.firstChild; n!=null; n=n.nextSibling ) {
       </p>
       </tr></td>
     </table>
-    <p><em>
+    <p alin="justify"><em>
         <strong>Note:</strong> Right now the SIP Communicator is still a work in
         progress and as such is still unstable. If you would like to help or
         follow project progress check the <a class='wikilink'
