--- a/www/index.html
+++ b/www/index.html
@@ -29,9 +29,9 @@ for( n=ld.firstChild; n!=null; n=n.nextSibling ) {
 </script>
 <table border="0" cellpadding="0" style="border-collapse: collapse" bordercolor="#111111" width="100%" id="AutoNumber2">
   <tr>
-    <td width="15%" valign="middle">
+    <td width="20%" valign="middle">
     <p align="center">
-            <a href="http://sip-communicator.org"><img border="0" src="images/sip-communicator.logo.png" alt="sip-communicator.org"></a>
+	<a href="http://sip-communicator.org"><img border="0" src="images/sip-communicator.logo.png" alt="sip-communicator.org"></a><br />
             SIP Communicator <br /><small>Open Source  VoIP &amp; IM</small>
     </p>
 <br>
