--- a/www/project_tools.html
+++ b/www/project_tools.html
@@ -1,4 +1,6 @@
 </dd>
+<link rel='SHORTCUT ICON' href='http://sip-communicator.dev.java.net/sc_logo16x16.png'	/>
+<link rel='icon' href='http://sip-communicator.dev.java.net/sc_logo16x16.png' type='image/png' />
 <!-- hide the contents while the theme engine kicks in and does the work -->
 <script>document.getElementById("main").parentNode.style.display="none";</script>
 <!--
