--- a/www/index.html
+++ b/www/index.html
@@ -1,103 +1,1 @@
-<html>
-<head>
-<META NAME="Keywords" CONTENT="java,sip,voip,ip phone,sip phone,softphone,sip softphone,ip telephony,digital phone,digital voice,pc to phone,webphone,internet phone,internet telephony,sipcommunicator,wi-fi,wireless,internet telephone,net phone,web phone,software phone,xten,x-pro,x-lite,vocable,voice-over ip,emil ivov,communicator">
-
-
-</head>
-
-<body>
- <style>
-        .app H3 {
-            clear: none;
-        }
-        .axial {
-            display: none;
-        }
-        #apphead {
-            display: none;
-        }
-    </style>
-    <script>
-// kill "description" h3 bar
-ld = document.getElementById("longdescription");
-for( n=ld.firstChild; n!=null; n=n.nextSibling ) {
-    if(n.nodeType==1 && n.innerHTML=="Description" ) {
-      n.parentNode.removeChild(n);
-      break;
-    }
-}
-</script>
-<table border="0" cellpadding="0" style="border-collapse: collapse" bordercolor="#111111" width="100%" id="AutoNumber2">
-  <tr>
-    <td width="20%" valign="middle">
-    <p align="center">
-	<a href="http://sip-communicator.org"><img border="0" src="images/sip-communicator.logo.png" alt="sip-communicator.org"></a><br />
-            SIP Communicator <br /><small>Open Source  VoIP &amp; IM</small>
-    </p>
-<br>
-    </td>
-    <td width="90%">
-    <p><strong>SIP Communicator - the Java VoIP and Instant Messaging client.</strong></p>
-    <p align="justify">
-    SIP Communicator is an audio/video Internet phone and instant messenger that
-    support some of the most popular instant messaging and telephony protocols
-    such as SIP, Jabber, AIM/ICQ, MSN and soon others like Yahoo and IRC.
-    </p>
-    <p align="justify">
-    The SIP Communicator is completely <a href="http://www.opensource.org/">Open Source</a> /
-    <a href="http://www.gnu.org/philosophy/free-sw.html">Free Software</a>, and is
-    freely available under the terms of the
-    <a href="http://www.gnu.org/licenses/lgpl.html">GNU Lesser General Public License</a>.
-    </p>
-
-    <table border="0" cellpadding="2" cellspacing="2" width="100%"
-  style="background-color: white">
-    <tr><td style="background-color: lightgray">
-      <p alin="justify">
-        RESOURCES: The SIP Communicator <a class='wikilink'
-          href='http://www.sip-communicator.org/index.php/Documentation/FAQ'>FAQ</a>
-          can usually answer most questions. You can also ask on the
-          <a class='wikilink'
-            href='http://www.sip-communicator.org/index.php/Development/MailingLists#users'>users</a>
-            mailing list, or at the <a class='urllink'
-              href='http://www.sip-communicator.org/irc/irc.cgi' rel='nofollow'>irc channel</a>
-              #sip-communicator at irc.freenode.net.
-      </p>
-      </tr></td>
-    </table>
-    <p alin="justify"><em>
-        <strong>Note:</strong> Right now the SIP Communicator is still a work in
-        progress and as such is still unstable. If you would like to help or
-        follow project progress check the <a class='wikilink'
-          href='http://www.sip-communicator.org/index.php/Development/Roadmap'>Project Roadmap</a>
-          or join our <a class='wikilink' href='http://www.sip-communicator.org/index.php/Development/MailingLists'>Mailing Lists</a>.
-          You can also have a look at the SIP Communicator <a class='wikilink' href='http://www.sip-communicator.org/index.php/Main/Screenshots'>screenshots</a> </em>
-     </p>
-     <p>
-<strong>
-Thanks for your patience and continuing support!
-<br>
-<a href="https://sip-communicator.org/wiki/index.php/Development/TeamAndContributors">
-The SIP Communicator team</a></strong></p>
-
-
-    </td>
-  </tr>
-</table>
-
-<p><a href="http://www-r2.u-strasbg.fr/english/index_en.php">Network Research Team</a><br>
-<a href="http://www-ulp.u-strasbg.fr/?langue=1">Louis Pasteur University - Strasbourg, France</a><br>
-</p>
-
-
-</body>
-
-</html>
-
-
-
-
-
-
-
-
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />                                           .app H3 {             clear: none;         }         .axial {             display: none;         }         #apphead {             display: none;         }           // kill "description" h3 bar ld = document.getElementById("longdescription"); for( n=ld.firstChild; n!=null; n=n.nextSibling ) {     if(n.nodeType==1 && n.innerHTML=="Description" ) {       n.parentNode.removeChild(n);       break;     } }  <table width="100%" cellpadding="0" bordercolor="#111111" border="0" id="AutoNumber2" style="border-collapse: collapse">   <tbody><tr>     <td valign="middle" style="width: 20%">     <p align="center"> 	<a href="http://sip-communicator.org"><img border="0" alt="sip-communicator.org" src="images/sip-communicator.logo.png" /></a><br />             SIP Communicator <br />Open Source  VoIP &amp; IM     </p> <br />     </td>     <td style="width: 90%">          <p align="justify">     SIP Communicator is an audio/video Internet phone and instant messenger that     support some of the most popular instant messaging and telephony protocols     such as SIP, Jabber, AIM/ICQ, MSN and soon others like Yahoo and IRC.     </p>     <p align="justify">     The SIP Communicator is completely <a href="http://www.opensource.org/">Open Source</a> /     <a href="http://www.gnu.org/philosophy/free-sw.html">Free Software</a>, and is     freely available under the terms of the     <a href="http://www.gnu.org/licenses/lgpl.html">GNU Lesser General Public License</a>.     </p>      <table width="100%" cellspacing="2" cellpadding="2" border="0" style="background-color: white">     <tbody><tr><td style="background-color: lightgray">       <p>         RESOURCES: The SIP Communicator <a class="wikilink" href="http://www.sip-communicator.org/index.php/Documentation/FAQ">FAQ</a>           can usually answer most questions. You can also ask on the           <a class="wikilink" href="http://www.sip-communicator.org/index.php/Development/MailingLists#users">users</a>             mailing list, or at the <a rel="nofollow" class="urllink" href="http://www.sip-communicator.org/irc/irc.cgi">irc channel</a>               #sip-communicator at irc.freenode.net.       </p>       </td></tr>     </tbody></table>     <p><em>         <strong>Note:</strong> Right now the SIP Communicator is still a work in         progress and as such is still unstable. If you would like to help or         follow project progress check the <a class="wikilink" href="http://www.sip-communicator.org/index.php/Development/Roadmap">Project Roadmap</a>           or join our <a class="wikilink" href="http://www.sip-communicator.org/index.php/Development/MailingLists">Mailing Lists</a>.           You can also have a look at the SIP Communicator <a class="wikilink" href="http://www.sip-communicator.org/index.php/Main/Screenshots">screenshots</a> </em>      </p>      <p> <strong> Thanks for your patience and continuing support! <br /> <a href="https://sip-communicator.org/wiki/index.php/Development/TeamAndContributors"> The SIP Communicator team</a></strong></p>       </td>   </tr> </tbody></table>  <p><a href="http://www-r2.u-strasbg.fr/english/index_en.php">Network Research Team</a><br /> <a href="http://www-ulp.u-strasbg.fr/?langue=1">Louis Pasteur University - Strasbourg, France</a><br /> </p>                   
