Renamed the CVS link.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@2919 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/www/project_tools.html
+++ b/www/project_tools.html
@@ -32,7 +32,7 @@
 	<li>
 	<a href="https://sip-communicator.dev.java.net/servlets/ProjectMembershipRequest">Become a member</a>
 	<li>
-	<a href="https://sip-communicator.dev.java.net/source/browse/sip-communicator/">Version Control - CVS</a>
+	<a href="https://sip-communicator.dev.java.net/source/browse/sip-communicator/">SVN repository</a>
 	<li>
 	<a href="http://www.sip-communicator.org/index.php/Development/MailingLists">Mailing lists</a>
 	<li>
