Removed references to sc-plugin-tests
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@2926 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/www/project_tools.html
+++ b/www/project_tools.html
@@ -69,11 +69,11 @@ var info = {
   
   This example uses the ws/xml zone, but pick up the right zone that matches your project.
 -->
-<script src="https://sc-plugin-tests.dev.java.net/zone-core.js"></script>
+<script src="https://sip-communicator.dev.java.net/zone-core.js"></script>
 <!--
   This includes the theme engine script.
 -->
-<script src="https://sc-plugin-tests.dev.java.net/theme.js"></script> 
+<script src="https://sip-communicator.dev.java.net/theme.js"></script> 
 
 <!--
   If your project uses a site traffic tracker like Google Analytics, this is a good place
