--- a/www/project_tools.html
+++ b/www/project_tools.html
@@ -58,7 +58,7 @@
 -->
 <script>
 var info = {
-	title: "SIP Communicator",
+	title: "SIP Communicator - the Java VoIP and Instant Messaging Client",
 	logo: ""
 }
 </script>
