fix javascript error. replaced a non secure http:// resource with a secure one (https://)
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@2940 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/www/project_tools.html
+++ b/www/project_tools.html
@@ -86,9 +86,9 @@ _uacct = "UA-1273798-1";
 urchinTracker();
 </script>
 -->
-<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
+<script src="https://ssl.google-analytics.com/urchin.js" type="text/javascript">
 </script>
 <script type="text/javascript">
-	_uacct = "UA-319188-2";
-	urchinTracker();
+_uacct = "UA-319188-2";
+urchinTracker();
 </script>
