git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@3094 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/www/project_tools.html
+++ b/www/project_tools.html
@@ -73,7 +73,7 @@ var info = {
 <!--
   This includes the theme engine script.
 -->
-<!--<script src="https://sip-communicator.dev.java.net/theme.js"></script> -->
+<script src="https://sip-communicator.dev.java.net/theme.js"></script> 
 
 <!--
   If your project uses a site traffic tracker like Google Analytics, this is a good place
