added an extra forward
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@3102 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/www/index.html
+++ b/www/index.html
@@ -1,4 +1,9 @@
-<html><body>
+<html>
+<head>
+	<title>www.sip-communicator.org</title>
+	<meta HTTP-EQUIV="refresh" CONTENT="0;URL=http://www.sip-communicator.org">
+</head>
+<body>
 	<h3>sip-communicator.org</h3>
 	<p>
 		<a href="http://sip-communicator.org/">Forwarding to sip-communicator.org</a>
