--- a/www/project_tools.html
+++ b/www/project_tools.html
@@ -59,9 +59,11 @@
 If your project uses a site traffic tracker like Google Analytics, this is a good place
 to inject it.
 -->
+<!-- the following is taking too much time so i am disabling it
 <script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
 </script>
 <script type="text/javascript">
 	_uacct = "UA-319188-2";
 	urchinTracker();
 </script>
+-->
