--- a/www/project_tools.html
+++ b/www/project_tools.html
@@ -59,6 +59,14 @@
 If your project uses a site traffic tracker like Google Analytics, this is a good place
 to inject it.
 -->
+<!--
+<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
+</script>
+<script type="text/javascript">
+	_uacct = "UA-319188-2";
+	urchinTracker();
+</script>
+-->
 <script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
 </script>
 <script type="text/javascript">
