Updating stat tracker for java.net pages. All resulting builds would have no real modifications
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@4583 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/www/project_tools.html
+++ b/www/project_tools.html
@@ -59,17 +59,12 @@
 If your project uses a site traffic tracker like Google Analytics, this is a good place
 to inject it.
 -->
-<!--
-<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
+
+<script type="text/javascript">
+	var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+	document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
 </script>
 <script type="text/javascript">
-	_uacct = "UA-319188-2";
-	urchinTracker();
-</script>
--->
-<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
-</script>
-<script type="text/javascript">
-	_uacct = "UA-319188-2";
-	urchinTracker();
+	var pageTracker = _gat._getTracker("UA-319188-1");
+	pageTracker._trackPageview();
 </script>
